<resources>
    <string name="app_name"> QIUP Programmes Enquiry </string>
    <string name="hint_name"> Full Name </string>
    <string name="hint_email"> Email </string>
    <string name="hint_password"> Password </string>
    <string name="err_msg_name"> Please enter valid name </string>
    <string name="err_msg_email"> Please enter valid email address </string>
    <string name="err_contact_number"> Please enter valid contact number </string>
    <string name="err_IC"> Please enter valid IC </string>
    <string name="err_school_name"> Please enter school name </string>
    <string name="hint_for_programme"><font size="14">Put None if no interest programme</font></string>
    <string name="please_key_in_your_particulars">Please key-in your particulars</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_ic_without_dash">Enter IC without dash</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_school_name">Enter School Name</string>
    <string name="enter_remark">Enter Remark</string>
    <string name="no_interest_programme">No Interest Programme</string>
    <string name="choose_interested_programmes_max_3">Choose Interested Programmes (Max 3)</string>
    <string name="if_other_programme_please_specify">If other programme, please specify…</string>
    <string name="add_more_interest_programme">Add more Interest Programme</string>
    <string name="delete_interest_programme">Delete interest programme</string>
    <string name="generate">Generate</string>
    <string name="qualification_level">Qualification Level :</string>
    <string-array name="english_proficiency_test">
        <item> </item>
        <item> None </item>
        <item> MUET </item>
        <item> IELTS </item>
        <item> TOEFL (Paper-Based Test) </item>
        <item> TOEFL (Internet-Based Test) </item>
    </string-array>
    <string name="proficiency_level">Proficiency Level :</string>
    <string name="supportive_qualification_level">Supportive Qualification Level :</string>
    <string name="bahasa_malaysia">Bahasa Malaysia</string>
    <string name="english">English</string>
    <string name="mathematics">Mathematics</string>
    <string name="additional_mathematics">Additional Mathematics</string>
    <string name="not_eligible">Not eligible</string>
    <string name="eligible">Eligible</string>
    <string name="subjects">Subjects</string>
    <string name="grades">Grades</string>
    <string name="add_more_dropdown">Add more Dropdown</string>
    <string name="delete_dropdown">Delete dropdown</string>
    <string name="choose_spm_or_o_level">Choose SPM or O-Level</string>
    <string name="any_science_technical_vocational_subject">Any Science/Technical/Vocational subject</string>
    <string name="next">Next</string>
    <string name="student_s_academic_qualification">Student\'s Academic Qualification</string>
    <string name="view_not_eligible">View Not Eligible</string>
    <string name="view_eligible">View Eligible</string>
    <string name="here_is_your_path_that_you_can_join_in_qiup">Here is your path that you can join in QIUP</string>
    <string-array name="spm_or_oLevel_type">
        <item> </item>
        <item> SPM </item>
        <item> O-Level </item>
    </string-array>
    <string-array name="spm_science_technical_vocational_subject">
        <item> Science </item>
        <item> Physics </item>
        <item> Chemistry </item>
        <item> Biology </item>
        <item> Sains Pertanian </item>
        <item> Ekonomi Rumah Tangga </item>
        <item> Lukisan Kejuruteraan </item>
        <item> Pengajian Kejuruteraan Mekanikal </item>
        <item> Pengajian Kejuruteraan Awam </item>
        <item> Pengajian Kejuruteraan Elektrik dan Elektronik </item>
        <item> Reka Cipta </item>
        <item> Teknologi Kejuruteraan </item>
        <item> Grafik Komunikasi Teknikal </item>
        <item> Pembinaan Domestik </item>
        <item> Membuat Perabot </item>
        <item> Kerja Paip Domestik </item>
        <item> Pendawaian Domestik </item>
        <item> Kimpalan Arka dan Gas </item>
        <item> Menservis Automobil </item>
        <item> Menservis Motosikal </item>
        <item> Menservis Peralatan Penyejukan dan Penyamanan Udara </item>
        <item> Menservis Peralatan Elektrik Domestik </item>
        <item> Rekaan dan Jahitan Pakaian </item>
        <item> Katering dan Penyajian </item>
        <item> Pemprosesan Makanan </item>
        <item> Penjagaan Muka dan Dandanan Rambut </item>
        <item> Asuhan dan Pendidikan Awal Kanak-Kanak </item>
        <item> Gerontologi Asas dan Perkhidmatan Geriatrik </item>
        <item> Landskap dan Nurseri </item>
        <item> Akuakultur dan Haiwan Rekreasi </item>
        <item> Tanaman Makanan </item>
        <item> Seni Reka Tanda </item>
        <item> Hiasan Dalaman Asas </item>
        <item> Produksi Multimedia </item>
        <item> Grafik Berkomputer </item>
    </string-array>
    <string-array name="oLevel_science_technical_vocational_subject">
        <item> Agriculture </item>
        <item> Biology </item>
        <item> Chemistry </item>
        <item> Environmental Management </item>
        <item> Food and Nutrition </item>
        <item> Marine Science </item>
        <item> Physics </item>
        <item> Science - Combined </item>
        <item> Physical Education </item>
        <item> Physics Science </item>
        <item> Sciences - Co-ordinated (Double) </item>
    </string-array>
    <string-array name="uecLevel_science_technical_vocational_subject">
        <item> Digital Logic </item>
        <item> Basic Circuit Theory </item>
        <item> Principal Electronic </item>
        <item> Fundamentals of Electrical Engineering </item>
        <item> Physics </item>
        <item> Chemistry </item>
        <item> Biology </item>
        <item> Industrial English </item>
        <item> Car Repairing </item>
        <item> Industrial Arts </item>
    </string-array>
    <string-array name="qualification_type">
        <item> </item>
        <item> SPM </item>
        <item> STPM </item>
        <item> UEC </item>
        <item> O-Level </item>
        <item> A-Level </item>
        <item> STAM </item>
       
    </string-array>
    <string-array name="spm_subjects">
        <item> Bahasa Malaysia </item>
        <item> Bahasa Inggeris </item>
        <item> Sejarah </item>
        <item> Science </item>
        <item> Pendidikan Moral </item>
        <item> Pendidikan Islam </item>
        
        <item> Additional Mathematics </item>
        <item> Mathematics </item>
        <item> Physics </item>
        <item> Chemistry </item>
        <item> Biology </item>
        <item> Information and Communication Technology </item>
        <item> Additional Science </item>
        
        <item> Geografi </item>
        <item> Prinsip Perakaunan </item>
        <item> Ekonomi Asas </item>
        <item> Perdagangan </item>
        <item> Pengajian Keusahawanan </item>
        <item> Tasawwur Islam </item>
        <item> Pendidikan Al-Quran dan As-Sunnah </item>
        <item> Pendidikan Syariah Islamiah </item>
        <item> Bible Knowledge </item>
        
        <item> Pendidikan Seni Visual </item>
        <item> Pendidikan Muzik </item>
        <item> Pengetahuan Sains Sukan </item>
        
        <item> English for Science and Technology </item>
        <item> Literature in English </item>
        <item> Kesusasteraan Melayu </item>
        <item> Bahasa Arab </item>
        <item> Bahasa Iban </item>
        <item> Bahasa Kadazandusun </item>
        <item> Kesusasteraan Cina </item>
        <item> Kesusasteraan Tamil </item>
        <item> Bahasa Perancis </item>
        <item> Bahasa Punjabi </item>
        <item> Bahasa Cina </item>
        <item> Bahasa Tamil </item>
        
        <item> Sains Pertanian </item>
        <item> Ekonomi Rumah Tangga </item>
        <item> Lukisan Kejuruteraan </item>
        <item> Pengajian Kejuruteraan Mekanikal </item>
        <item> Pengajian Kejuruteraan Awam </item>
        <item> Pengajian Kejuruteraan Elektrik dan Elektronik </item>
        <item> Reka Cipta </item>
        <item> Teknologi Kejuruteraan </item>
        <item> Grafik Komunikasi Teknikal </item>
        <item> Pembinaan Domestik </item>
        <item> Membuat Perabot </item>
        <item> Kerja Paip Domestik </item>
        <item> Pendawaian Domestik </item>
        <item> Kimpalan Arka dan Gas </item>
        <item> Menservis Automobil </item>
        <item> Menservis Motosikal </item>
        <item> Menservis Peralatan Penyejukan dan Penyamanan Udara </item>
        <item> Menservis Peralatan Elektrik Domestik </item>
        <item> Rekaan dan Jahitan Pakaian </item>
        <item> Katering dan Penyajian </item>
        <item> Pemprosesan Makanan </item>
        <item> Penjagaan Muka dan Dandanan Rambut </item>
        <item> Asuhan dan Pendidikan Awal Kanak-Kanak </item>
        <item> Gerontologi Asas dan Perkhidmatan Geriatrik </item>
        <item> Landskap dan Nurseri </item>
        <item> Akuakultur dan Haiwan Rekreasi </item>
        <item> Tanaman Makanan </item>
        <item> Seni Reka Tanda </item>
        <item> Hiasan Dalaman Asas </item>
        <item> Produksi Multimedia </item>
        <item> Grafik Berkomputer </item>
    </string-array>
    <string-array name="spm_grades">
        <item>  </item>
        <item> A+ </item>
        <item> A </item>
        <item> A- </item>
        <item> B+ </item>
        <item> B </item>
        <item> C+ </item>
        <item> C </item> 
        <item> D </item> 
        <item> E </item> 
        <item> G </item> 
    </string-array>
    <string-array name="stpm_subjects">
        <item> Pengajian Am </item>
        <item> Bahasa Melayu </item>
        <item> Bahasa Cina </item>
        <item> Bahasa Tamil </item>
        <item> Bahasa Arab </item>
        <item> Kesusasteraan Inggeris </item> 
        
        <item> Kesusasteraan Melayu Komunikatif </item>
        <item> Sejarah </item>
        <item> Matematik (M) </item>
        <item> Matematik (T) </item>
        <item> Geografi </item>
        <item> Fizik </item>
        <item> Kimia </item> 
        <item> Biology </item>
        <item> Syariah </item> 
        <item> Usuluddin </item> 
        <item> Perakaunan </item>
        <item> Ekonomi </item>
        <item> Pengajian Perniagaan </item>
        
        <item> Teknologi Komunikasi dan Informasi </item>
        <item> Sains Sukan </item>
        <item> Sains Visual </item>
    </string-array>
    <string-array name="stpm_grades">
        <item>  </item>
        <item> A </item>
        <item> A- </item>
        <item> B+ </item>
        <item> B </item>
        <item> B- </item>
        <item> C+ </item>
        <item> C </item> 
        <item> C- </item>
        <item> D+ </item>
        <item> D </item>
        <item> F </item>
    </string-array>
</resources>