<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.qiup.programmeenquiry.qiupprogrammesenquiryapplication.com.qiup.programmeenquiry.ResultsOfFiltering">

    <item
        android:id="@+id/notEligibleIcon"
        android:icon="@drawable/ic_clear_white_24dp"
        android:title="@string/view_not_eligible"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/eligibleIcon"
        android:title="@string/view_eligible"
        android:icon="@drawable/ic_check_white_24dp"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/studentsAcademicQualification"
        android:title="@string/student_s_academic_qualification"
        android:icon="@drawable/ic_description_white_24dp"
        app:showAsAction="always"
        />

</menu>