<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:id="@+id/parent_layout"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/qualificationSpinner"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:ms_baseColor="@color/colorAccent"
            app:ms_errorColor="@color/colorAccent"
            app:ms_floatingLabelColor="@color/colorAccent"
            app:ms_hint="Select Current Qualification Level"
            app:ms_hintTextSize="15sp"
            app:ms_hintColor="@android:color/darker_gray"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/subjectsText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingEnd="10dp"
                android:paddingStart="7dp"
                android:text="@string/subjects"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/gradesText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.9"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/grades"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.qiup.programmeenquiry.InstantAutoComplete
                android:id="@+id/subjectsAutoCompleteTextView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:dropDownHeight= "130dp"
                android:completionThreshold="0"/>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/gradesSpinner"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteFieldText"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/delete_dropdown"
                android:textAllCaps="false"
                android:layout_marginStart="30dp"
                android:textSize="12sp" />

            <Button
                android:id="@+id/addNewSpinnerText"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/add_more_dropdown"
                android:layout_marginStart="45dp"
                android:textAllCaps="false"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/spmOlevelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/choose_spm_or_o_level"
                android:textSize="12sp"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spmOLevelSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="12dp"
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:hint="@string/any_science_technical_vocational_subject"
                app:hintTextAppearance="@style/TextLabel">
                <com.qiup.programmeenquiry.InstantAutoComplete
                    android:id="@+id/scienceTechnicalVocationalAutoCompleteTextView"
                    android:layout_width="222dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="20dp"
                    android:textSize="12sp"
                    android:completionThreshold="0"
                    android:dropDownHeight="130dp" />
            </android.support.design.widget.TextInputLayout>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/scienceTechnicalVocationalGrade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="2.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/bahasaMalaysiaText"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:text="@string/bahasa_malaysia"
                android:textSize="12sp"
                android:layout_marginTop="30dp" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/bahasaMalaysiaSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="2.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/englishText"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:text="@string/english"
                android:textSize="12sp"
                android:layout_marginTop="30dp" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/englishSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="2.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mathematicsText"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:text="@string/mathematics"
                android:textSize="12sp"
                android:layout_marginTop="30dp" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/mathematicsSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="2.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addMathText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="19dp"
                android:text="@string/additional_mathematics"
                android:textSize="12sp"
                android:layout_marginTop="30dp" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/addMathSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="2.5" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/filterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/next" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>